fix visual bug with navbar on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   padding: 2rem;
   background-color: #CDFCF6;
   font-size: 2.5rem;
-  font-family: 'IBM Plex Sans', sans-serif;
+
 }
 
 .navbar-collapse {
